# csvmodel

./: .gitignore  README.md  mypy.ini  publish.env  publish.sh  setup.cfg  tox.ini
.github/workflows/: ci.yml
src/csvmodel/: config.py  csvfile.py  errors.py  main.py  testing.py  types.py  validator.py
tests/cram/: combined.t  jsonschema.t  jsonschema_multi_file.t  pydantic.t
tests/unit/: test_config.py  test_csvfile.py  test_schema_parsing.py  test_validator.py
