[metadata]
author = Ingo Fruend
author_email = github@ingofruend.net
name = csvmodel
long_description = file: README.md
long_description_content_type = text/markdown
version = 2

[options]
install_requires = 
    docopt
    jsonschema
    pydantic[email]
package_dir=
    =src
packages=find:

[options.entry_points]
console_scripts =
    csvmodel = csvmodel.main:main

[options.packages.find]
where=src
